--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "my-blog",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://haneulsky.github.io/my-blog/",
     "dependencies": {
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
@@ -11,6 +12,7 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.1",
+        "gh-pages": "^3.2.3",
         "json-server": "^0.17.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
@@ -25,7 +27,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "format": "npx prettier --write ."
+        "format": "npx prettier --write .",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
