--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "dependencies": {
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
+        "@mui/icons-material": "^5.3.1",
         "@mui/material": "^5.2.3",
+        "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.1",
+        "dotenv": "^10.0.0",
         "gh-pages": "^3.2.3",
+        "history": "^4.9.0",
         "json-server": "^0.17.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-toastify": "^8.1.0",
