--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "gh-pages": "^3.2.3",
         "history": "^4.9.0",
         "json-server": "^0.17.0",
+        "nanoid": "^3.2.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
